--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <body>
     <div class="navigation">
         <nav class="navbar">
-            <li><a href="#Description"> Home</a></li>
             <li><a href="#projects"> Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </nav>
@@ -99,7 +98,7 @@
             </div>
         </div>
     </section>
-    <script src="./assets/js/index.js"></script>
+    <script type="module" src="./assets/js/index.js"></script>
     <script src="./assets/js/contact.js"></script>
 </body>
 </html>
